# withdrawls-analysis

./: README.md  pyproject.toml
Beacon Chain model/: README.md  beaconchain_model.ipynb
Skimmed forecast/: README.md  Skimmable rewards forecast.py
ValForecast/: DataCollection.py  ModelScript.py  README.md  modelsWrappers.py
